# study_bot

./: Dockerfile  README.md  database.py  docker-compose.yml  pyproject.toml  requirements.txt  tutor_bot.db  tutor_bot.py
docs/: conf.py  index.rst  modules.rst  tutor_bot.db
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
docs/source/: conf.py
